apps/services/hajimari/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hajimari
  labels:
    app: hajimari
  annotations:
    tailscale.com/hostname: "dashboard"
spec:
  ports:
  - name: http
    port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: hajimari
  type: LoadBalancer
  loadBalancerClass: tailscale
